@@ -48,7 +48,7 @@ namespace YAFC {
                     bool isError = row.parameters.warningFlags >= WarningFlags.EntityNotSpecified;
                     bool hover;
                     if (isError) {
-                        hover = gui.BuildRedButton(Icon.Error) == ButtonEvent.MouseOver;
+                        hover = gui.BuildRedButton(Icon.Error, invertedColors: true) == ButtonEvent.MouseOver;
                     }
                     else {
                         using (gui.EnterGroup(ImGuiUtils.DefaultIconPadding)) {
@@ -153,7 +153,16 @@ namespace YAFC {
                     });
                 }
 
-                gui.textColor = recipe.hierarchyEnabled ? SchemeColor.BackgroundText : SchemeColor.BackgroundTextFaint;
+                if (!recipe.enabled) {
+                    gui.textColor = SchemeColor.BackgroundTextFaint;
+                }
+                else if (view.flatHierarchyBuilder.nextRowIsHighlighted) {
+                    gui.textColor = view.flatHierarchyBuilder.nextRowTextColor;
+                }
+                else {
+                    gui.textColor = recipe.hierarchyEnabled ? SchemeColor.BackgroundText : SchemeColor.BackgroundTextFaint;
+                }
+
                 gui.BuildText(recipe.recipe.locName, wrap: true);
             }
 
@@ -875,7 +884,17 @@ goodsHaveNoProduction:;
                 iconColor = goods.IsSourceResource() ? SchemeColor.Green : SchemeColor.None;
             }
 
-            if (gui.BuildFactorioObjectWithAmount(goods, amount, goods?.flowUnitOfMeasure ?? UnitOfMeasure.None, iconColor)) {
+            // TODO: See https://github.com/have-fun-was-taken/yafc-ce/issues/91
+            //       and https://github.com/have-fun-was-taken/yafc-ce/pull/86#discussion_r1550377021
+            SchemeColor textColor = flatHierarchyBuilder.nextRowTextColor;
+            if (!flatHierarchyBuilder.nextRowIsHighlighted) {
+                textColor = SchemeColor.None;
+            }
+            else if (recipe is { enabled: false }) {
+                textColor = SchemeColor.BackgroundTextFaint;
+            }
+
+            if (gui.BuildFactorioObjectWithAmount(goods, amount, goods?.flowUnitOfMeasure ?? UnitOfMeasure.None, iconColor, textColor)) {
                 OpenProductDropdown(gui, gui.lastRect, goods, amount, link, dropdownType, recipe, context, variants);
             }
         }
