@@ -34,6 +34,12 @@ namespace YAFC.UI {
             ColorFromHex(0xe4e4e4), ColorFromHex(0xc4c4c4), Black, BlackTransparent, // Grey group
             ColorFromHex(0xbd33a4), ColorFromHex(0x8b008b), Black, BlackTransparent, // Magenta group
             ColorFromHex(0x6abf69), ColorFromHex(0x388e3c), Black, BlackTransparent, // Green group
+
+            // Row highlighting colors (background, background alt, text, text alt)
+            ColorFromHex(0xe8ffe8), ColorFromHex(0xefffef), ColorFromHex(0x56ad65), ColorFromHex(0x0), // Green
+            ColorFromHex(0xffffe8), ColorFromHex(0xffffef), ColorFromHex(0x8c8756), ColorFromHex(0x0), // Yellow
+            ColorFromHex(0xffe8e8), ColorFromHex(0xffefef), ColorFromHex(0xaa5555), ColorFromHex(0x0), // Red
+            ColorFromHex(0xe8efff), ColorFromHex(0xeff4ff), ColorFromHex(0x526ea5), ColorFromHex(0x0), // Blue
         };
 
         private static readonly SDL.SDL_Color[] DarkModeScheme = {
@@ -47,6 +53,12 @@ namespace YAFC.UI {
             ColorFromHex(0x343434), ColorFromHex(0x545454), White, WhiteTransparent, // Grey group
             ColorFromHex(0x8b008b), ColorFromHex(0xbd33a4), Black, BlackTransparent, // Magenta group
             ColorFromHex(0x00600f), ColorFromHex(0x00701a), Black, BlackTransparent, // Green group
+
+            // Row highlighting colors (background, background alt, text, text alt)
+            ColorFromHex(0x0d261f), ColorFromHex(0x050f0c), ColorFromHex(0x226355), ColorFromHex(0x0), // Green
+            ColorFromHex(0x28260b), ColorFromHex(0x191807), ColorFromHex(0x5b582a), ColorFromHex(0x0), // Yellow
+            ColorFromHex(0x270c0c), ColorFromHex(0x190808), ColorFromHex(0x922626), ColorFromHex(0x0), // Red
+            ColorFromHex(0x0c0c27), ColorFromHex(0x080819), ColorFromHex(0x2626ab), ColorFromHex(0x0)  // Blue
         };
 
         private static SDL.SDL_Color[] SchemeColors = LightModeScheme;
