@@ -3,6 +3,8 @@ Version: 0.6.3
 Date: TBA
     Changes:
         - Allow selecting multiple object with CTRL-click in places it makes sense.
+        - Tagged recipe rows are now colored in the color of the tag.
+        - Rows with errors are now more visibile.
 ----------------------------------------------------------------------------------------------------------------------
 Version: 0.6.2
 Date: March 2024
